Week2_Assignment2/Grammer/gen/MnemonicParser.cpp

// Generated from C:/Users/Tomonobu/Documents/home/Keyence/Antlr/ANTLRProject/Week2_Assignment2/Grammer\Mnemonic.g4 by ANTLR 4.7.2


#include "MnemonicListener.h"
#include "MnemonicVisitor.h"

#include "MnemonicParser.h"


using namespace antlrcpp;
using namespace antlr4;

MnemonicParser::MnemonicParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MnemonicParser::~MnemonicParser() {
  delete _interpreter;
}

std::string MnemonicParser::getGrammarFileName() const {
  return "Mnemonic.g4";
}

const std::vector<std::string>& MnemonicParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MnemonicParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- InputContext ------------------------------------------------------------------

MnemonicParser::InputContext::InputContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MnemonicParser::InputContext::EOF() {
  return getToken(MnemonicParser::EOF, 0);
}

std::vector<tree::TerminalNode *> MnemonicParser::InputContext::NEWLINE() {
  return getTokens(MnemonicParser::NEWLINE);
}

tree::TerminalNode* MnemonicParser::InputContext::NEWLINE(size_t i) {
  return getToken(MnemonicParser::NEWLINE, i);
}

std::vector<MnemonicParser::MnemonicContext *> MnemonicParser::InputContext::mnemonic() {
  return getRuleContexts<MnemonicParser::MnemonicContext>();
}

MnemonicParser::MnemonicContext* MnemonicParser::InputContext::mnemonic(size_t i) {
  return getRuleContext<MnemonicParser::MnemonicContext>(i);
}


size_t MnemonicParser::InputContext::getRuleIndex() const {
  return MnemonicParser::RuleInput;
}

void MnemonicParser::InputContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInput(this);
}

void MnemonicParser::InputContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInput(this);
}


antlrcpp::Any MnemonicParser::InputContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MnemonicVisitor*>(visitor))
    return parserVisitor->visitInput(this);
  else
    return visitor->visitChildren(this);
}

MnemonicParser::InputContext* MnemonicParser::input() {
  InputContext *_localctx = _tracker.createInstance<InputContext>(_ctx, getState());
  enterRule(_localctx, 0, MnemonicParser::RuleInput);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(56);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(51);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == MnemonicParser::SEPARATOR

        || _la == MnemonicParser::IDENTIFIER) {
          setState(50);
          mnemonic();
        }
        setState(53);
        match(MnemonicParser::NEWLINE); 
      }
      setState(58);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx);
    }
    setState(60);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MnemonicParser::SEPARATOR

    || _la == MnemonicParser::IDENTIFIER) {
      setState(59);
      mnemonic();
    }
    setState(62);
    match(MnemonicParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MnemonicContext ------------------------------------------------------------------

MnemonicParser::MnemonicContext::MnemonicContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MnemonicParser::InstructionContext* MnemonicParser::MnemonicContext::instruction() {
  return getRuleContext<MnemonicParser::InstructionContext>(0);
}

std::vector<MnemonicParser::SeparatorContext *> MnemonicParser::MnemonicContext::separator() {
  return getRuleContexts<MnemonicParser::SeparatorContext>();
}

MnemonicParser::SeparatorContext* MnemonicParser::MnemonicContext::separator(size_t i) {
  return getRuleContext<MnemonicParser::SeparatorContext>(i);
}

std::vector<MnemonicParser::OperandContext *> MnemonicParser::MnemonicContext::operand() {
  return getRuleContexts<MnemonicParser::OperandContext>();
}

MnemonicParser::OperandContext* MnemonicParser::MnemonicContext::operand(size_t i) {
  return getRuleContext<MnemonicParser::OperandContext>(i);
}

tree::TerminalNode* MnemonicParser::MnemonicContext::NEWLINE() {
  return getToken(MnemonicParser::NEWLINE, 0);
}


size_t MnemonicParser::MnemonicContext::getRuleIndex() const {
  return MnemonicParser::RuleMnemonic;
}

void MnemonicParser::MnemonicContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMnemonic(this);
}

void MnemonicParser::MnemonicContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMnemonic(this);
}


antlrcpp::Any MnemonicParser::MnemonicContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MnemonicVisitor*>(visitor))
    return parserVisitor->visitMnemonic(this);
  else
    return visitor->visitChildren(this);
}

MnemonicParser::MnemonicContext* MnemonicParser::mnemonic() {
  MnemonicContext *_localctx = _tracker.createInstance<MnemonicContext>(_ctx, getState());
  enterRule(_localctx, 2, MnemonicParser::RuleMnemonic);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(67);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MnemonicParser::SEPARATOR) {
      setState(64);
      separator();
      setState(69);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }

    setState(70);
    instruction();
    setState(76);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(71);
        separator();
        setState(72);
        operand(); 
      }
      setState(78);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
    setState(82);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == MnemonicParser::SEPARATOR) {
      setState(79);
      separator();
      setState(84);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(86);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(85);
      match(MnemonicParser::NEWLINE);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SeparatorContext ------------------------------------------------------------------

MnemonicParser::SeparatorContext::SeparatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MnemonicParser::SeparatorContext::SEPARATOR() {
  return getToken(MnemonicParser::SEPARATOR, 0);
}


size_t MnemonicParser::SeparatorContext::getRuleIndex() const {
  return MnemonicParser::RuleSeparator;
}

void MnemonicParser::SeparatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSeparator(this);
}

void MnemonicParser::SeparatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSeparator(this);
}


antlrcpp::Any MnemonicParser::SeparatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MnemonicVisitor*>(visitor))
    return parserVisitor->visitSeparator(this);
  else
    return visitor->visitChildren(this);
}

MnemonicParser::SeparatorContext* MnemonicParser::separator() {
  SeparatorContext *_localctx = _tracker.createInstance<SeparatorContext>(_ctx, getState());
  enterRule(_localctx, 4, MnemonicParser::RuleSeparator);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(MnemonicParser::SEPARATOR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionContext ------------------------------------------------------------------

MnemonicParser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MnemonicParser::InstructionContext::getRuleIndex() const {
  return MnemonicParser::RuleInstruction;
}

void MnemonicParser::InstructionContext::copyFrom(InstructionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Inst_with_suffixContext ------------------------------------------------------------------

tree::TerminalNode* MnemonicParser::Inst_with_suffixContext::IDENTIFIER() {
  return getToken(MnemonicParser::IDENTIFIER, 0);
}

MnemonicParser::SuffixContext* MnemonicParser::Inst_with_suffixContext::suffix() {
  return getRuleContext<MnemonicParser::SuffixContext>(0);
}

MnemonicParser::Inst_with_suffixContext::Inst_with_suffixContext(InstructionContext *ctx) { copyFrom(ctx); }

void MnemonicParser::Inst_with_suffixContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInst_with_suffix(this);
}
void MnemonicParser::Inst_with_suffixContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInst_with_suffix(this);
}

antlrcpp::Any MnemonicParser::Inst_with_suffixContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MnemonicVisitor*>(visitor))
    return parserVisitor->visitInst_with_suffix(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Inst_normalContext ------------------------------------------------------------------

tree::TerminalNode* MnemonicParser::Inst_normalContext::IDENTIFIER() {
  return getToken(MnemonicParser::IDENTIFIER, 0);
}

MnemonicParser::Inst_normalContext::Inst_normalContext(InstructionContext *ctx) { copyFrom(ctx); }

void MnemonicParser::Inst_normalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInst_normal(this);
}
void MnemonicParser::Inst_normalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInst_normal(this);
}

antlrcpp::Any MnemonicParser::Inst_normalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MnemonicVisitor*>(visitor))
    return parserVisitor->visitInst_normal(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Inst_arithContext ------------------------------------------------------------------

tree::TerminalNode* MnemonicParser::Inst_arithContext::IDENTIFIER() {
  return getToken(MnemonicParser::IDENTIFIER, 0);
}

MnemonicParser::Arith_operatorContext* MnemonicParser::Inst_arithContext::arith_operator() {
  return getRuleContext<MnemonicParser::Arith_operatorContext>(0);
}

MnemonicParser::SuffixContext* MnemonicParser::Inst_arithContext::suffix() {
  return getRuleContext<MnemonicParser::SuffixContext>(0);
}

MnemonicParser::Inst_arithContext::Inst_arithContext(InstructionContext *ctx) { copyFrom(ctx); }

void MnemonicParser::Inst_arithContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInst_arith(this);
}
void MnemonicParser::Inst_arithContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInst_arith(this);
}

antlrcpp::Any MnemonicParser::Inst_arithContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MnemonicVisitor*>(visitor))
    return parserVisitor->visitInst_arith(this);
  else
    return visitor->visitChildren(this);
}
MnemonicParser::InstructionContext* MnemonicParser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 6, MnemonicParser::RuleInstruction);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(98);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<MnemonicParser::Inst_normalContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(90);
      match(MnemonicParser::IDENTIFIER);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<MnemonicParser::Inst_with_suffixContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(91);
      match(MnemonicParser::IDENTIFIER);
      setState(92);
      suffix();
      break;
    }

    case 3: {
      _localctx = dynamic_cast<InstructionContext *>(_tracker.createInstance<MnemonicParser::Inst_arithContext>(_localctx));
      enterOuterAlt(_localctx, 3);
      setState(93);
      match(MnemonicParser::IDENTIFIER);
      setState(94);
      arith_operator();
      setState(96);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == MnemonicParser::DOT_SUFFIX) {
        setState(95);
        suffix();
      }
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Arith_operatorContext ------------------------------------------------------------------

MnemonicParser::Arith_operatorContext::Arith_operatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MnemonicParser::Arith_operatorContext::ARITH_PLUS() {
  return getToken(MnemonicParser::ARITH_PLUS, 0);
}

tree::TerminalNode* MnemonicParser::Arith_operatorContext::ARITH_MINUS() {
  return getToken(MnemonicParser::ARITH_MINUS, 0);
}

tree::TerminalNode* MnemonicParser::Arith_operatorContext::MUL_OP_REF() {
  return getToken(MnemonicParser::MUL_OP_REF, 0);
}

tree::TerminalNode* MnemonicParser::Arith_operatorContext::ARITH_DIV() {
  return getToken(MnemonicParser::ARITH_DIV, 0);
}

tree::TerminalNode* MnemonicParser::Arith_operatorContext::ARITH_EQ() {
  return getToken(MnemonicParser::ARITH_EQ, 0);
}

tree::TerminalNode* MnemonicParser::Arith_operatorContext::ARITH_LT() {
  return getToken(MnemonicParser::ARITH_LT, 0);
}

tree::TerminalNode* MnemonicParser::Arith_operatorContext::ARITH_GT() {
  return getToken(MnemonicParser::ARITH_GT, 0);
}

tree::TerminalNode* MnemonicParser::Arith_operatorContext::ARITH_RSHIFT() {
  return getToken(MnemonicParser::ARITH_RSHIFT, 0);
}

tree::TerminalNode* MnemonicParser::Arith_operatorContext::ARITH_LSHIFT() {
  return getToken(MnemonicParser::ARITH_LSHIFT, 0);
}

tree::TerminalNode* MnemonicParser::Arith_operatorContext::ARITH_AND() {
  return getToken(MnemonicParser::ARITH_AND, 0);
}

tree::TerminalNode* MnemonicParser::Arith_operatorContext::ARITH_OR() {
  return getToken(MnemonicParser::ARITH_OR, 0);
}

tree::TerminalNode* MnemonicParser::Arith_operatorContext::ARITH_XOR() {
  return getToken(MnemonicParser::ARITH_XOR, 0);
}


size_t MnemonicParser::Arith_operatorContext::getRuleIndex() const {
  return MnemonicParser::RuleArith_operator;
}

void MnemonicParser::Arith_operatorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArith_operator(this);
}

void MnemonicParser::Arith_operatorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArith_operator(this);
}


antlrcpp::Any MnemonicParser::Arith_operatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MnemonicVisitor*>(visitor))
    return parserVisitor->visitArith_operator(this);
  else
    return visitor->visitChildren(this);
}

MnemonicParser::Arith_operatorContext* MnemonicParser::arith_operator() {
  Arith_operatorContext *_localctx = _tracker.createInstance<Arith_operatorContext>(_ctx, getState());
  enterRule(_localctx, 8, MnemonicParser::RuleArith_operator);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MnemonicParser::MUL_OP_REF)
      | (1ULL << MnemonicParser::ARITH_PLUS)
      | (1ULL << MnemonicParser::ARITH_MINUS)
      | (1ULL << MnemonicParser::ARITH_DIV)
      | (1ULL << MnemonicParser::ARITH_EQ)
      | (1ULL << MnemonicParser::ARITH_LT)
      | (1ULL << MnemonicParser::ARITH_GT)
      | (1ULL << MnemonicParser::ARITH_RSHIFT)
      | (1ULL << MnemonicParser::ARITH_LSHIFT)
      | (1ULL << MnemonicParser::ARITH_OR)
      | (1ULL << MnemonicParser::ARITH_AND)
      | (1ULL << MnemonicParser::ARITH_XOR))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SuffixContext ------------------------------------------------------------------

MnemonicParser::SuffixContext::SuffixContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MnemonicParser::SuffixContext::DOT_SUFFIX() {
  return getToken(MnemonicParser::DOT_SUFFIX, 0);
}


size_t MnemonicParser::SuffixContext::getRuleIndex() const {
  return MnemonicParser::RuleSuffix;
}

void MnemonicParser::SuffixContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSuffix(this);
}

void MnemonicParser::SuffixContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSuffix(this);
}


antlrcpp::Any MnemonicParser::SuffixContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MnemonicVisitor*>(visitor))
    return parserVisitor->visitSuffix(this);
  else
    return visitor->visitChildren(this);
}

MnemonicParser::SuffixContext* MnemonicParser::suffix() {
  SuffixContext *_localctx = _tracker.createInstance<SuffixContext>(_ctx, getState());
  enterRule(_localctx, 10, MnemonicParser::RuleSuffix);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    match(MnemonicParser::DOT_SUFFIX);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OperandContext ------------------------------------------------------------------

MnemonicParser::OperandContext::OperandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MnemonicParser::DeviceContext* MnemonicParser::OperandContext::device() {
  return getRuleContext<MnemonicParser::DeviceContext>(0);
}

MnemonicParser::ImmediateContext* MnemonicParser::OperandContext::immediate() {
  return getRuleContext<MnemonicParser::ImmediateContext>(0);
}

tree::TerminalNode* MnemonicParser::OperandContext::OPERAND_UNDEFINED() {
  return getToken(MnemonicParser::OPERAND_UNDEFINED, 0);
}


size_t MnemonicParser::OperandContext::getRuleIndex() const {
  return MnemonicParser::RuleOperand;
}

void MnemonicParser::OperandContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOperand(this);
}

void MnemonicParser::OperandContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOperand(this);
}


antlrcpp::Any MnemonicParser::OperandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MnemonicVisitor*>(visitor))
    return parserVisitor->visitOperand(this);
  else
    return visitor->visitChildren(this);
}

MnemonicParser::OperandContext* MnemonicParser::operand() {
  OperandContext *_localctx = _tracker.createInstance<OperandContext>(_ctx, getState());
  enterRule(_localctx, 12, MnemonicParser::RuleOperand);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(107);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(104);
      device();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(105);
      immediate();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(106);
      match(MnemonicParser::OPERAND_UNDEFINED);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeviceContext ------------------------------------------------------------------

MnemonicParser::DeviceContext::DeviceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MnemonicParser::Device_old_indirectContext* MnemonicParser::DeviceContext::device_old_indirect() {
  return getRuleContext<MnemonicParser::Device_old_indirectContext>(0);
}

MnemonicParser::Device_zContext* MnemonicParser::DeviceContext::device_z() {
  return getRuleContext<MnemonicParser::Device_zContext>(0);
}

MnemonicParser::Device_normalContext* MnemonicParser::DeviceContext::device_normal() {
  return getRuleContext<MnemonicParser::Device_normalContext>(0);
}

MnemonicParser::Rly_or_int_immediateContext* MnemonicParser::DeviceContext::rly_or_int_immediate() {
  return getRuleContext<MnemonicParser::Rly_or_int_immediateContext>(0);
}


size_t MnemonicParser::DeviceContext::getRuleIndex() const {
  return MnemonicParser::RuleDevice;
}

void MnemonicParser::DeviceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDevice(this);
}

void MnemonicParser::DeviceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MnemonicListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDevice(this);
}

